--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,16 +25,16 @@ jobs:
       - name: Build the project
         run: npm run build
 
-      - name: Deploy to server
-        uses: appleboy/scp-action@master
+      - name: Deploy to server using rsync
+        uses: burnett01/rsync-deployments@v1.0
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          source: './.vitepress/dist/'
-          target: /var/www/html/z-doc
-          debug: true
+          switches: '-avz --delete'
+          path: './.vitepress/dist/'
+          remote_path: '/var/www/html/z-doc'
+          remote_host: ${{ secrets.SSH_HOST }}
+          remote_user: ${{ secrets.SSH_USERNAME }}
+          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          remote_port: ${{ secrets.SSH_PORT }}
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
