--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm run build
 
       - name: Deploy to server using rsync
-        uses: burnett01/rsync-deployments@v1.0
+        uses: burnett01/rsync-deployments@7.0.1
         with:
           switches: '-avz --delete'
           path: './.vitepress/dist/'
