--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,8 @@ jobs:
 
       - name: Upload Compressed File via SCP
         run: |
-          scp -P ${{ secrets.SSH_PORT }} -i <(echo "${{ secrets.SSH_PRIVATE_KEY }}") ./dist.tar.gz ${{
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key && chmod 600 private_key
+          scp -P ${{ secrets.SSH_PORT }} -i private_key ./dist.tar.gz ${{
             secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:/var/www/html/rirh
 
       - name: Unpack and Cleanup on Server
